2012-05-05  Zan Dobersek  <zandobersek@gmail.com>

        Increase the display ID for the Xvfb process to use if pixel_tests argument
        is true rather than if pixel_tests option is present. This fixes the
        XvfbDriver in the same way r115825 fixed the now-redundant GtkDriver.

        Rubber-stamped by Csaba Osztrogonác.

        * Scripts/webkitpy/layout_tests/port/xvfbdriver.py:
        (XvfbDriver._start):

2012-05-04  Raphael Kubo da Costa  <rakuco@webkit.org>

        webkitpy: Preserve XDG_DATA_DIRS in the environment passed to ServerProcess.
        https://bugs.webkit.org/show_bug.cgi?id=85694

        Reviewed by Martin Robinson.

        This is sort of a follow-up to r100674: $XDG_DATA_DIRS should be
        preserved, as it is particularly useful for Linux/Unix
        environments.  As a real use case, if shared-mime-info is
        installed into a non-trivial prefix, Glib and other libraries will
        have trouble to properly identify mimetypes (in ResourceResponses,
        for example) as the base freedesktop.org mimetype file will not be
        found.

        * Scripts/webkitpy/layout_tests/port/base.py:
        (Port.to.setup_environ_for_server):

2012-05-04  Gustavo Noronha Silva  <gns@gnome.org>

        [GTK] Simplify how libWebCoreModules is linked in, and fix WebKit2 build
        https://bugs.webkit.org/show_bug.cgi?id=85691

        * GNUmakefile.am: no longer link libWebCoreModules to DumpRenderTree.

2012-05-04  Eric Seidel  <eric@webkit.org>

        Make capitalization and descriptions in FeatureList.pm more consistent to make easier to autogenerate
        https://bugs.webkit.org/show_bug.cgi?id=85583

        Reviewed by Daniel Bates.

        * Scripts/webkitperl/FeatureList.pm:

2012-05-04  Eric Seidel  <eric@webkit.org>

        Sort entries in FeaturesList.pm to make them easier to autogenerate
        https://bugs.webkit.org/show_bug.cgi?id=85584

        Reviewed by Daniel Bates.
